data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_1009.wast
;; 10. **Stack-based Arithmetic Followed by `unreachable`:**    - **Description:** Perform arithmetic operations that manipulate the stack, followed by an `unreachable` instruction to check if the arithmetic results are properly preserved until the trap.    - **Constraint:** Arithmetic operations should be valid just before hitting the `unreachable`.    - **Relation to Stack Corruption:** Ensures arithmetically altered stack is respected upon trap.  These tests are designed to identify differential behavior in the WebAssembly and Wizard Engine implementations with a focus on how `unreachable` instruction impacts stack management and ensuring robust error handling through proper stack state preservation upon trapping.

(assert_invalid
  (module 
    (func $stack_arith_then_unreachable
      i32.const 10
      i32.const 20
      i32.add
      unreachable
    )
  )
  "unreachable instruction execution trap"
)